Bug 412464 - Lots of plasmashell: invalid metadata warnings
Summary: Lots of plasmashell: invalid metadata warnings
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (other bugs)
Version First Reported In: 5.61.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-30 08:24 UTC by Wolfgang Bauer
Modified: 2020-02-07 13:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.68
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Bauer 2019-09-30 08:24:17 UTC
Since https://cgit.kde.org/plasma-framework.git/commit/?id=21227e0f989a8b5d0129b0c02508346af192214c, plasmashell prints a lot of warnings on start:
invalid metadata "/usr/lib64/qt5/plugins/kcm_baloofileadv.so"
invalid metadata "/usr/lib64/qt5/plugins/fileviewbazaarplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/fileviewdropboxplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/fileviewgitplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/fileviewhgplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/fileviewsvnplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_audiocd.so"
invalid metadata "/usr/lib64/qt5/plugins/libaudiocd_encoder_flac.so"
invalid metadata "/usr/lib64/qt5/plugins/libaudiocd_encoder_lame.so"
invalid metadata "/usr/lib64/qt5/plugins/libaudiocd_encoder_opus.so"
invalid metadata "/usr/lib64/qt5/plugins/libaudiocd_encoder_vorbis.so"
invalid metadata "/usr/lib64/qt5/plugins/libaudiocd_encoder_wav.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kdeconnect.so"
invalid metadata "/usr/lib64/qt5/plugins/kdeconnect_pausemusic_config.so"
invalid metadata "/usr/lib64/qt5/plugins/kdeconnect_runcommand_config.so"
invalid metadata "/usr/lib64/qt5/plugins/kdeconnect_sendnotifications_config.so"
invalid metadata "/usr/lib64/qt5/plugins/kdeconnect_share_config.so"
invalid metadata "/usr/lib64/qt5/plugins/kdeconnectfileitemaction.so"
invalid metadata "/usr/lib64/qt5/plugins/mobithumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/kio_msits.so"
invalid metadata "/usr/lib64/qt5/plugins/okularpart.so"
invalid metadata "/usr/lib64/qt5/plugins/kstyle_qtcurve5_config.so"
invalid metadata "/usr/lib64/qt5/plugins/audiothumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/comicbookthumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/djvuthumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/ebookthumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/exrthumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/imagethumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/jpegthumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/kfileaudiopreview.so"
invalid metadata "/usr/lib64/qt5/plugins/kritathumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/opendocumentthumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/svgthumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/textthumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/windowsexethumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/windowsimagethumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/akregator_config_archive.so"
invalid metadata "/usr/lib64/qt5/plugins/akregator_config_general.so"
invalid metadata "/usr/lib64/qt5/plugins/akregator_config_plugins.so"
invalid metadata "/usr/lib64/qt5/plugins/akregator_mk4storage_plugin.so"
invalid metadata "/usr/lib64/qt5/plugins/akregatorpart.so"
invalid metadata "/usr/lib64/qt5/plugins/kontact_akregatorplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/gvpart.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_printer_manager.so"
invalid metadata "/usr/lib64/qt5/plugins/kded_printmanager.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kleopatra.so"
invalid metadata "/usr/lib64/qt5/plugins/accountwizard_plugin.so"
invalid metadata "/usr/lib64/qt5/plugins/ktploggerplugin_tplogger.so"
invalid metadata "/usr/lib64/qt5/plugins/korg_datenums.so"
invalid metadata "/usr/lib64/qt5/plugins/korg_picoftheday.so"
invalid metadata "/usr/lib64/qt5/plugins/korg_thisdayinhistory.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kmail.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kmailsummary.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kontactsummary.so"
invalid metadata "/usr/lib64/qt5/plugins/kmailpart.so"
invalid metadata "/usr/lib64/qt5/plugins/kontact_kmailplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/kontact_summaryplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kontact.so"
invalid metadata "/usr/lib64/qt5/plugins/krossmoduleforms.so"
invalid metadata "/usr/lib64/qt5/plugins/krossmodulekdetranslation.so"
invalid metadata "/usr/lib64/qt5/plugins/krossqts.so"
invalid metadata "/usr/lib64/qt5/plugins/baloofilepropertiesplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_wacomtablet.so"
invalid metadata "/usr/lib64/qt5/plugins/libmarble_part.so"
invalid metadata "/usr/lib64/qt5/plugins/libmarblethumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/plasma_runner_marble.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_cddb.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kget_bittorrentfactory.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kget_checksumsearchfactory.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kget_metalinkfactory.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kget_mirrorsearchfactory.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kget_multisegkiofactory.so"
invalid metadata "/usr/lib64/qt5/plugins/kget_browser_integration.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_bookmarks.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_konq.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_konqhtml.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_performance.so"
invalid metadata "/usr/lib64/qt5/plugins/konq_aboutpage.so"
invalid metadata "/usr/lib64/qt5/plugins/akregatorkonqfeedicon.so"
invalid metadata "/usr/lib64/qt5/plugins/autorefresh.so"
invalid metadata "/usr/lib64/qt5/plugins/babelfishplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/dirfilterplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/domtreeviewerplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/fsviewpart.so"
invalid metadata "/usr/lib64/qt5/plugins/khtmlsettingsplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/khtmlttsplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/kimgallery.so"
invalid metadata "/usr/lib64/qt5/plugins/konq_shellcmdplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/minitoolsplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/rellinksplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/searchbarplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/validatorsplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/webarchiverplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/webarchivethumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/akonadi_serializer_kalarm.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_krunner_pimcontacts.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_pimcontacts.so"
invalid metadata "/usr/lib64/qt5/plugins/akonadi_serializer_mail.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_akonadicontact_actions.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_mailtransport.so"
invalid metadata "/usr/lib64/qt5/plugins/akonadi_serializer_addressee.so"
invalid metadata "/usr/lib64/qt5/plugins/akonadi_serializer_contactgroup.so"
invalid metadata "/usr/lib64/qt5/plugins/akonadi_serializer_kcalcore.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_kdevelopsessions.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_trash.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kio.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_webshortcuts.so"
invalid metadata "/usr/lib64/qt5/plugins/dolphinpart.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_dolphingeneral.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_dolphinnavigation.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_dolphinservices.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_dolphinviewmodes.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kwallet5.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_sddm.so"
invalid metadata "/usr/lib64/qt5/plugins/user_manager.so"
invalid metadata "/usr/lib64/qt5/plugins/miloutextplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_browsertabs.so"
invalid metadata "/usr/lib64/qt5/plugins/kstyle_breeze_config.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kwin_scripts.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kwinoptions.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kwinrules.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kwinscreenedges.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kwintabbox.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kwintouchscreen.so"
invalid metadata "/usr/lib64/qt5/plugins/kwincompositing.so"
invalid metadata "/usr/lib64/qt5/plugins/kio_bluetooth.so"
invalid metadata "/usr/lib64/qt5/plugins/kio_obexftp.so"
invalid metadata "/usr/lib64/qt5/plugins/sambausershareplugin.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kgamma.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_about_distro.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_devinfo.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_info.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_memory.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_nic.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_opengl.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_pci.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_samba.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_usb.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_view1394.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_networkmanagement.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_krunner_charrunner.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_krunner_dictionary.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_krunner_spellcheck.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_charrunner.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_converter.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_datetime.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_dictionary.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_katesessions.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_konsoleprofiles.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_spellcheck.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_knemo.so"
invalid metadata "/usr/lib64/qt5/plugins/libplasmanetworkmanagement_openconnectui.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_powerdevilactivitiesconfig.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_powerdevilglobalconfig.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_powerdevilprofilesconfig.so"
invalid metadata "/usr/lib64/qt5/plugins/powerdevilbrightnesscontrolaction_config.so"
invalid metadata "/usr/lib64/qt5/plugins/powerdevildimdisplayaction_config.so"
invalid metadata "/usr/lib64/qt5/plugins/powerdevildpmsaction.so"
invalid metadata "/usr/lib64/qt5/plugins/powerdevildpmsaction_config.so"
invalid metadata "/usr/lib64/qt5/plugins/powerdevilhandlebuttoneventsaction_config.so"
invalid metadata "/usr/lib64/qt5/plugins/powerdevilkeyboardbrightnesscontrolaction_config.so"
invalid metadata "/usr/lib64/qt5/plugins/powerdevilrunscriptaction_config.so"
invalid metadata "/usr/lib64/qt5/plugins/powerdevilsuspendsessionaction_config.so"
invalid metadata "/usr/lib64/qt5/plugins/powerdevilwirelesspowersavingaction_config.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_filetypes.so"
invalid metadata "/usr/lib64/qt5/plugins/icon_mode.so"
invalid metadata "/usr/lib64/qt5/plugins/systemsettings_sidebar_mode.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_hotkeys.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_krunner_kill.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_activities.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_appstream.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_bookmarksrunner.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_calculatorrunner.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_kill.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_locations.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_placesrunner.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_powerdevil.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_recentdocuments.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_services.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_sessions.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_shell.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_webshortcuts.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_windowedwidgets.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_windows.so"
invalid metadata "/usr/lib64/qt5/plugins/plasma-geolocation-gps.so"
invalid metadata "/usr/lib64/qt5/plugins/plasma-geolocation-ip.so"
invalid metadata "/usr/lib64/qt5/plugins/attica_kde.so"
invalid metadata "/usr/lib64/qt5/plugins/fontthumbnail.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_access.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_activities.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_autostart.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_baloofile.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_clock.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_componentchooser.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_desktoppaths.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_emoticons.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_fontinst.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_joystick.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_kded.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_keyboard.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_keys.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_mouse.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_plasmasearch.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_smserver.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_solid_actions.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_standard_actions.so"
invalid metadata "/usr/lib64/qt5/plugins/kcm_style.so"
invalid metadata "/usr/lib64/qt5/plugins/kcmspellchecking.so"
invalid metadata "/usr/lib64/qt5/plugins/kded_touchpad.so"
invalid metadata "/usr/lib64/qt5/plugins/kfontviewpart.so"
invalid metadata "/usr/lib64/qt5/plugins/kio_fonts.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_kwin.so"
invalid metadata "/usr/lib64/qt5/plugins/krunner_plasma-desktop.so"
invalid metadata "/usr/lib64/qt5/plugins/libkcm_device_automounter.so"
invalid metadata "/usr/lib64/qt5/plugins/libkcm_qtquicksettings.so"
invalid metadata "/usr/lib64/qt5/plugins/kstyle_oxygen_config.so"
Comment 1 Wolfgang Bauer 2019-09-30 10:43:15 UTC
I did some more investigation...

The new code in plasma-framework does KPluginMetaData metadata(pluginPath);
And pluginPath is the path to the plugin's .so file.
These plugins have their metadata in a .desktop file though, not in the .so file.

Corresponding code in kcoreaddons:
KPluginMetaData::KPluginMetaData(const QString &file)
{
    if (file.endsWith(QLatin1String(".desktop"))) {
        loadFromDesktopFile(file, QStringList());
    } else if (file.endsWith(QLatin1String(".json"))) {
        d = new KPluginMetaDataPrivate;
        QFile f(file);
        bool b = f.open(QIODevice::ReadOnly);
        if (!b) {
            qCWarning(KCOREADDONS_DEBUG) << "Couldn't open" << file;
            return;
        }

        QJsonParseError error;
        m_metaData = QJsonDocument::fromJson(f.readAll(), &error).object();
        if (error.error) {
            qCWarning(KCOREADDONS_DEBUG) << "error parsing" << file << error.errorString();
        }
        m_fileName = file;
        d->metaDataFileName = file;
    } else {
        QPluginLoader loader(file);
        m_fileName = QFileInfo(loader.fileName()).absoluteFilePath();
        m_metaData = loader.metaData().value(QStringLiteral("MetaData")).toObject();
    }
}
I.e. it uses QPluginLoader here to get the metadata from the .so file, which is empty (because the metadata is actually in the .desktop file only).
Comment 2 Wolfgang Bauer 2019-09-30 10:48:23 UTC
So I think the new caching code should just ignore plugins with empty/invalid metadata (as it does), and not print a warning about it either.
Comment 3 Nate Graham 2020-01-31 22:54:20 UTC
This annoys me too and I agree with your reasoning. Trivial patch: https://phabricator.kde.org/D27080
Comment 4 Nate Graham 2020-02-07 13:34:15 UTC
Git commit b76b908e1056a38170725c939c7865e748f0db6a by Nate Graham.
Committed on 07/02/2020 at 13:34.
Pushed by ngraham into branch 'master'.

Don't warn for invalid plugin metata

Summary:
See explanation in https://bugs.kde.org/show_bug.cgi?id=412464
FIXED-IN: 5.67

Test Plan: restart plasmashell, see way less useless warning spam

Reviewers: #plasma, mart, apol

Reviewed By: apol

Subscribers: apol, alex, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D27080

M  +1    -1    src/plasma/pluginloader.cpp

https://commits.kde.org/plasma-framework/b76b908e1056a38170725c939c7865e748f0db6a